--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@ video {
             <div class="inner">
                 <div id="image01" class="image"><img src="/top.png" alt="" /></div>
                 <h1 id="text02" style="font-family: 'Ubuntu',Arial;">薄荷 官网地址</h1>
-                <p id="text01" style="color:#00ff99;font-weight: 800;">请牢记bohe777.com 最新域名都会在本站发布</p>
+                <p id="text01" style="color:#00ff99;font-weight: 800;">请牢记bohe777.com<br />最新域名都会在本站发布</p>
                 <button style="color: #ffffff;background-color: #F64E60;border-color: #F64E60;border: 1px solid transparent;padding: 0.65rem 1rem;font-size: 1rem;line-height: 1.2;border-radius: 0.42rem;"><a href="https://bohe888.com" style="text-decoration: none;" target="_blank">👉薄荷官网一  bohe888.com👈</a></button>
                 <button style="color: #ffffff;background-color: #F64E60;border-color: #F64E60;border: 1px solid transparent;padding: 0.65rem 1rem;font-size: 1rem;line-height: 1.2;border-radius: 0.42rem;"><a href="https://bohe666.com" style="text-decoration: none;" target="_blank">👉薄荷官网二 bohe666.com👈</a></button>
                 <!--<ul id="icons01" class="icons">-->
